Source/WebCore/svg/SVGFELightElement.h
@@ -32,6 +32,8 @@ namespace WebCore {
 class SVGFELightElement : public SVGElement {
 public:
     virtual PassRefPtr<LightSource> lightSource() const = 0;
+    static SVGFELightElement* findLightElement(const SVGElement*);
+    static PassRefPtr<LightSource> findLightSource(const SVGElement*);
 
 protected:
     SVGFELightElement(const QualifiedName&, Document*);
